sources/mountainheart-net/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd
  namespace: mountainheart-net
  labels:
    app: httpd
spec:
  selector:
    app: httpd
  ports:
    - name: http
      port: 8080
      targetPort: 8080
